--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/si-2019/SI-Delta-2019#readme",
   "dependencies": {
-    "express": "^4.16.4",
-    "npm": "^6.9.0"
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.0",
+    "mysql": "^2.17.1",
+    "npm": "^6.9.0",
+    "sequelize-auto": "^0.4.29"
   }
 }
