--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.0",
     "mysql": "^2.17.1",
+    "node-fetch": "^2.6.0",
     "npm": "^6.9.0",
     "sequelize-auto": "^0.4.29",
     "swagger-ui-express": "^4.0.6",
